Extracting all numbers by RegEx

--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14b813c8",
+   "id": "d0e6408c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd026d3c",
+   "id": "2162d4d1",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -33,25 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f2380af2",
+   "execution_count": 27,
+   "id": "ab35415a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-16T05:07:52.998508Z",
-     "start_time": "2022-03-16T05:07:52.982551Z"
+     "end_time": "2022-03-17T04:55:06.131008Z",
+     "start_time": "2022-03-17T04:55:06.126022Z"
     }
    },
    "outputs": [],
    "source": [
     "import ffmpeg\n",
     "import os\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6ca3b4e9",
+   "id": "da5708a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -68,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4dbb055",
+   "id": "de34e342",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b4ace68",
+   "id": "6f4ce037",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -101,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c928adff",
+   "id": "fc2958f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fec17f31",
+   "id": "ad1ad9e7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b523e2e",
+   "id": "4a6098f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -218,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dedadd58",
+   "id": "a6394f72",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -242,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7f36f507",
+   "id": "f301d69e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -443,16 +444,77 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffcc0182",
+   "id": "8e5d0a41",
    "metadata": {},
    "source": [
-    "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n"
+    "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
+    "\n",
+    "## Trying regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bdc745b1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T05:07:26.712925Z",
+     "start_time": "2022-03-17T05:07:26.691982Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(14.1607, 14.5508, 0.390113),\n",
+       " (14.5509, 14.8773, 0.32644),\n",
+       " (53.0442, 53.3589, 0.314671),\n",
+       " (67.8339, 68.1681, 0.334218),\n",
+       " (114.954, 115.233, 0.279206),\n",
+       " (131.051, 131.385, 0.333991),\n",
+       " (143.995, 144.25, 0.255125),\n",
+       " (168.528, 168.838, 0.30966),\n",
+       " (174.488, 174.809, 0.321088),\n",
+       " (186.484, 186.759, 0.274921),\n",
+       " (246.877, 247.2, 0.322494),\n",
+       " (354.82, 355.123, 0.302766),\n",
+       " (381.662, 382.15, 0.487982),\n",
+       " (387.647, 387.954, 0.307256),\n",
+       " (391.426, 391.968, 0.541338),\n",
+       " (411.457, 411.745, 0.287506),\n",
+       " (413.169, 413.475, 0.305624),\n",
+       " (414.698, 415.037, 0.338889),\n",
+       " (415.894, 416.155, 0.260975),\n",
+       " (417.332, 417.977, 0.644603),\n",
+       " (421.379, 421.786, 0.406893),\n",
+       " (424.438, 424.878, 0.439841),\n",
+       " (439.395, 439.699, 0.304059)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_out = str(stdout) \n",
+    "# reg = r'(silence_start: (\\d+.\\d+)).*(silence_end: (\\d+.\\d+)).*(silence_duration: (\\d+.\\d+))'\n",
+    "# reg = r'(silence_start: (\\d+.\\d+))'\n",
+    "# reg = r'silence_start: (\\d+.\\d+)'\n",
+    "s_start = re.findall(r'silence_start: (\\d+.\\d+)', str_out)\n",
+    "s_end = re.findall(r'silence_end: (\\d+.\\d+)', str_out)\n",
+    "s_duration = re.findall(r'silence_duration: (\\d+.\\d+)', str_out)\n",
+    "s_start = map(float, s_start)\n",
+    "s_end= map(float, s_end)\n",
+    "s_duration= map(float, s_duration)\n",
+    "result = zip(s_start, s_end, s_duration)\n",
+    "list(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb283e0",
+   "id": "8615041e",
    "metadata": {},
    "outputs": [],
    "source": []
