Created a Pandas DataFrame of the results

--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0e6408c",
+   "id": "9a483ee4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2162d4d1",
+   "id": "22bfa402",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "ab35415a",
+   "execution_count": 36,
+   "id": "917e79c3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T04:55:06.131008Z",
-     "start_time": "2022-03-17T04:55:06.126022Z"
+     "end_time": "2022-03-17T17:56:58.542298Z",
+     "start_time": "2022-03-17T17:56:57.057049Z"
     }
    },
    "outputs": [],
@@ -46,13 +46,14 @@
     "import ffmpeg\n",
     "import os\n",
     "import subprocess\n",
-    "import re"
+    "import re\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "da5708a5",
+   "id": "894af0fa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "de34e342",
+   "id": "b1c33495",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4ce037",
+   "id": "c9e7f05d",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fc2958f2",
+   "id": "8decc40d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ad1ad9e7",
+   "id": "6746ee39",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6098f6",
+   "id": "70ede60b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -219,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a6394f72",
+   "id": "bd8b93c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -243,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f301d69e",
+   "id": "8fed2f0e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5d0a41",
+   "id": "ad69bb21",
    "metadata": {},
    "source": [
     "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
@@ -454,12 +455,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "bdc745b1",
+   "execution_count": 35,
+   "id": "6e7c63f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T05:07:26.712925Z",
-     "start_time": "2022-03-17T05:07:26.691982Z"
+     "end_time": "2022-03-17T17:55:32.470847Z",
+     "start_time": "2022-03-17T17:55:32.462870Z"
     }
    },
    "outputs": [
@@ -491,7 +492,7 @@
        " (439.395, 439.699, 0.304059)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,14 +508,341 @@
     "s_start = map(float, s_start)\n",
     "s_end= map(float, s_end)\n",
     "s_duration= map(float, s_duration)\n",
-    "result = zip(s_start, s_end, s_duration)\n",
-    "list(result)"
+    "results = list(zip(s_start, s_end, s_duration))\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e36209e3",
+   "metadata": {},
+   "source": [
+    "## Splitting\n",
+    "The file `TestFile.mp3` duration is 7:21. (441 seconds)\n",
+    "\n",
+    "Consider splitting the file every 60 seconds, \n",
+    "\n",
+    "i.e. @60, 120, 180, 240, 300, 360, 420 seconds\n",
+    "\n",
+    "If the remaining portion is less than 30 seconds, then it should be merged to the last portion.\n",
+    "\n",
+    "### We need to import pandas to deal with the table faster\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c94a7170",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T18:00:20.431231Z",
+     "start_time": "2022-03-17T18:00:20.399321Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>silence_start</th>\n",
+       "      <th>silence_end</th>\n",
+       "      <th>silence_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.1607</td>\n",
+       "      <td>14.5508</td>\n",
+       "      <td>0.390113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.5509</td>\n",
+       "      <td>14.8773</td>\n",
+       "      <td>0.326440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53.0442</td>\n",
+       "      <td>53.3589</td>\n",
+       "      <td>0.314671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>67.8339</td>\n",
+       "      <td>68.1681</td>\n",
+       "      <td>0.334218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>114.9540</td>\n",
+       "      <td>115.2330</td>\n",
+       "      <td>0.279206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>131.0510</td>\n",
+       "      <td>131.3850</td>\n",
+       "      <td>0.333991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>143.9950</td>\n",
+       "      <td>144.2500</td>\n",
+       "      <td>0.255125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>168.5280</td>\n",
+       "      <td>168.8380</td>\n",
+       "      <td>0.309660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>174.4880</td>\n",
+       "      <td>174.8090</td>\n",
+       "      <td>0.321088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>186.4840</td>\n",
+       "      <td>186.7590</td>\n",
+       "      <td>0.274921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>246.8770</td>\n",
+       "      <td>247.2000</td>\n",
+       "      <td>0.322494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>354.8200</td>\n",
+       "      <td>355.1230</td>\n",
+       "      <td>0.302766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>381.6620</td>\n",
+       "      <td>382.1500</td>\n",
+       "      <td>0.487982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>387.6470</td>\n",
+       "      <td>387.9540</td>\n",
+       "      <td>0.307256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>391.4260</td>\n",
+       "      <td>391.9680</td>\n",
+       "      <td>0.541338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>411.4570</td>\n",
+       "      <td>411.7450</td>\n",
+       "      <td>0.287506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>413.1690</td>\n",
+       "      <td>413.4750</td>\n",
+       "      <td>0.305624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>414.6980</td>\n",
+       "      <td>415.0370</td>\n",
+       "      <td>0.338889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>415.8940</td>\n",
+       "      <td>416.1550</td>\n",
+       "      <td>0.260975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>417.3320</td>\n",
+       "      <td>417.9770</td>\n",
+       "      <td>0.644603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>421.3790</td>\n",
+       "      <td>421.7860</td>\n",
+       "      <td>0.406893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>424.4380</td>\n",
+       "      <td>424.8780</td>\n",
+       "      <td>0.439841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>439.3950</td>\n",
+       "      <td>439.6990</td>\n",
+       "      <td>0.304059</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    silence_start  silence_end  silence_duration\n",
+       "0         14.1607      14.5508          0.390113\n",
+       "1         14.5509      14.8773          0.326440\n",
+       "2         53.0442      53.3589          0.314671\n",
+       "3         67.8339      68.1681          0.334218\n",
+       "4        114.9540     115.2330          0.279206\n",
+       "5        131.0510     131.3850          0.333991\n",
+       "6        143.9950     144.2500          0.255125\n",
+       "7        168.5280     168.8380          0.309660\n",
+       "8        174.4880     174.8090          0.321088\n",
+       "9        186.4840     186.7590          0.274921\n",
+       "10       246.8770     247.2000          0.322494\n",
+       "11       354.8200     355.1230          0.302766\n",
+       "12       381.6620     382.1500          0.487982\n",
+       "13       387.6470     387.9540          0.307256\n",
+       "14       391.4260     391.9680          0.541338\n",
+       "15       411.4570     411.7450          0.287506\n",
+       "16       413.1690     413.4750          0.305624\n",
+       "17       414.6980     415.0370          0.338889\n",
+       "18       415.8940     416.1550          0.260975\n",
+       "19       417.3320     417.9770          0.644603\n",
+       "20       421.3790     421.7860          0.406893\n",
+       "21       424.4380     424.8780          0.439841\n",
+       "22       439.3950     439.6990          0.304059"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df = pd.DataFrame(\n",
+    "    results, columns=['silence_start', 'silence_end', 'silence_duration'])\n",
+    "results_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e00f325",
+   "metadata": {},
+   "source": [
+    "We need to split at the middle of the silence period,\n",
+    " i.e., @ `silence_start + silence_duration / 2`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2bc7722e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T18:04:35.502165Z",
+     "start_time": "2022-03-17T18:04:35.489202Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>silence_start</th>\n",
+       "      <th>silence_end</th>\n",
+       "      <th>silence_duration</th>\n",
+       "      <th>split_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.1607</td>\n",
+       "      <td>14.5508</td>\n",
+       "      <td>0.390113</td>\n",
+       "      <td>14.355757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.5509</td>\n",
+       "      <td>14.8773</td>\n",
+       "      <td>0.326440</td>\n",
+       "      <td>14.714120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53.0442</td>\n",
+       "      <td>53.3589</td>\n",
+       "      <td>0.314671</td>\n",
+       "      <td>53.201535</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   silence_start  silence_end  silence_duration   split_at\n",
+       "0        14.1607      14.5508          0.390113  14.355757\n",
+       "1        14.5509      14.8773          0.326440  14.714120\n",
+       "2        53.0442      53.3589          0.314671  53.201535"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df[\n",
+    "    'split_at'] = results_df.silence_start + results_df.silence_duration / 2\n",
+    "\n",
+    "results_df.head(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8615041e",
+   "id": "cb6ed06e",
    "metadata": {},
    "outputs": [],
    "source": []
