The success_array of splitting time is found

--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9a483ee4",
+   "id": "f0a25650",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22bfa402",
+   "id": "44eb143c",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "917e79c3",
+   "execution_count": 41,
+   "id": "d7883c6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T17:56:58.542298Z",
-     "start_time": "2022-03-17T17:56:57.057049Z"
+     "end_time": "2022-03-17T18:12:08.730142Z",
+     "start_time": "2022-03-17T18:12:08.715181Z"
     }
    },
    "outputs": [],
@@ -47,13 +47,14 @@
     "import os\n",
     "import subprocess\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "894af0fa",
+   "id": "2e430f25",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b1c33495",
+   "id": "abf20096",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e7f05d",
+   "id": "a05c6866",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -103,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8decc40d",
+   "id": "3c018991",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -133,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6746ee39",
+   "id": "d1bf3995",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ede60b",
+   "id": "4422b47c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bd8b93c2",
+   "id": "07e8c5c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -244,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8fed2f0e",
+   "id": "b46baad5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad69bb21",
+   "id": "61d02df8",
    "metadata": {},
    "source": [
     "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
@@ -456,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6e7c63f4",
+   "id": "b2d86f06",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T17:55:32.470847Z",
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e36209e3",
+   "id": "fc11dbda",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -526,17 +527,17 @@
     "\n",
     "If the remaining portion is less than 30 seconds, then it should be merged to the last portion.\n",
     "\n",
-    "### We need to import pandas to deal with the table faster\n"
+    "***We need to import pandas to deal with the table faster***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "c94a7170",
+   "execution_count": 39,
+   "id": "6b257280",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T18:00:20.431231Z",
-     "start_time": "2022-03-17T18:00:20.399321Z"
+     "end_time": "2022-03-17T18:05:50.245191Z",
+     "start_time": "2022-03-17T18:05:50.233223Z"
     }
    },
    "outputs": [
@@ -585,158 +586,18 @@
        "      <td>53.3589</td>\n",
        "      <td>0.314671</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>67.8339</td>\n",
-       "      <td>68.1681</td>\n",
-       "      <td>0.334218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>114.9540</td>\n",
-       "      <td>115.2330</td>\n",
-       "      <td>0.279206</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>131.0510</td>\n",
-       "      <td>131.3850</td>\n",
-       "      <td>0.333991</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>143.9950</td>\n",
-       "      <td>144.2500</td>\n",
-       "      <td>0.255125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>168.5280</td>\n",
-       "      <td>168.8380</td>\n",
-       "      <td>0.309660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>174.4880</td>\n",
-       "      <td>174.8090</td>\n",
-       "      <td>0.321088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>186.4840</td>\n",
-       "      <td>186.7590</td>\n",
-       "      <td>0.274921</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>246.8770</td>\n",
-       "      <td>247.2000</td>\n",
-       "      <td>0.322494</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>354.8200</td>\n",
-       "      <td>355.1230</td>\n",
-       "      <td>0.302766</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>381.6620</td>\n",
-       "      <td>382.1500</td>\n",
-       "      <td>0.487982</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>387.6470</td>\n",
-       "      <td>387.9540</td>\n",
-       "      <td>0.307256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>391.4260</td>\n",
-       "      <td>391.9680</td>\n",
-       "      <td>0.541338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>411.4570</td>\n",
-       "      <td>411.7450</td>\n",
-       "      <td>0.287506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>413.1690</td>\n",
-       "      <td>413.4750</td>\n",
-       "      <td>0.305624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>414.6980</td>\n",
-       "      <td>415.0370</td>\n",
-       "      <td>0.338889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>415.8940</td>\n",
-       "      <td>416.1550</td>\n",
-       "      <td>0.260975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>417.3320</td>\n",
-       "      <td>417.9770</td>\n",
-       "      <td>0.644603</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>421.3790</td>\n",
-       "      <td>421.7860</td>\n",
-       "      <td>0.406893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>424.4380</td>\n",
-       "      <td>424.8780</td>\n",
-       "      <td>0.439841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>439.3950</td>\n",
-       "      <td>439.6990</td>\n",
-       "      <td>0.304059</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    silence_start  silence_end  silence_duration\n",
-       "0         14.1607      14.5508          0.390113\n",
-       "1         14.5509      14.8773          0.326440\n",
-       "2         53.0442      53.3589          0.314671\n",
-       "3         67.8339      68.1681          0.334218\n",
-       "4        114.9540     115.2330          0.279206\n",
-       "5        131.0510     131.3850          0.333991\n",
-       "6        143.9950     144.2500          0.255125\n",
-       "7        168.5280     168.8380          0.309660\n",
-       "8        174.4880     174.8090          0.321088\n",
-       "9        186.4840     186.7590          0.274921\n",
-       "10       246.8770     247.2000          0.322494\n",
-       "11       354.8200     355.1230          0.302766\n",
-       "12       381.6620     382.1500          0.487982\n",
-       "13       387.6470     387.9540          0.307256\n",
-       "14       391.4260     391.9680          0.541338\n",
-       "15       411.4570     411.7450          0.287506\n",
-       "16       413.1690     413.4750          0.305624\n",
-       "17       414.6980     415.0370          0.338889\n",
-       "18       415.8940     416.1550          0.260975\n",
-       "19       417.3320     417.9770          0.644603\n",
-       "20       421.3790     421.7860          0.406893\n",
-       "21       424.4380     424.8780          0.439841\n",
-       "22       439.3950     439.6990          0.304059"
+       "   silence_start  silence_end  silence_duration\n",
+       "0        14.1607      14.5508          0.390113\n",
+       "1        14.5509      14.8773          0.326440\n",
+       "2        53.0442      53.3589          0.314671"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,12 +605,12 @@
    "source": [
     "results_df = pd.DataFrame(\n",
     "    results, columns=['silence_start', 'silence_end', 'silence_duration'])\n",
-    "results_df"
+    "results_df.head(3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3e00f325",
+   "id": "22c0e60e",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -758,12 +619,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "2bc7722e",
+   "execution_count": 40,
+   "id": "05299808",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T18:04:35.502165Z",
-     "start_time": "2022-03-17T18:04:35.489202Z"
+     "end_time": "2022-03-17T18:07:53.975151Z",
+     "start_time": "2022-03-17T18:07:53.959196Z"
     }
    },
    "outputs": [
@@ -791,7 +652,7 @@
        "      <th>silence_start</th>\n",
        "      <th>silence_end</th>\n",
        "      <th>silence_duration</th>\n",
-       "      <th>split_at</th>\n",
+       "      <th>silence_mid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -821,28 +682,171 @@
        "</div>"
       ],
       "text/plain": [
-       "   silence_start  silence_end  silence_duration   split_at\n",
-       "0        14.1607      14.5508          0.390113  14.355757\n",
-       "1        14.5509      14.8773          0.326440  14.714120\n",
-       "2        53.0442      53.3589          0.314671  53.201535"
+       "   silence_start  silence_end  silence_duration  silence_mid\n",
+       "0        14.1607      14.5508          0.390113    14.355757\n",
+       "1        14.5509      14.8773          0.326440    14.714120\n",
+       "2        53.0442      53.3589          0.314671    53.201535"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results_df[\n",
-    "    'split_at'] = results_df.silence_start + results_df.silence_duration / 2\n",
+    "    'silence_mid'] = results_df.silence_start + results_df.silence_duration / 2\n",
     "\n",
     "results_df.head(3)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8678c7c6",
+   "metadata": {},
+   "source": [
+    "looping through the `silence_mid` to find the neasest value to each of our splitting points\n",
+    "\n",
+    "***we need numpy to create a list of stopping points***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b143ffc9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T18:17:21.746087Z",
+     "start_time": "2022-03-17T18:17:21.738109Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 60, 120, 180, 240, 300, 360, 420])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_interval, file_interval = 60, 441\n",
+    "split_arr = np.arange(split_interval, file_interval, split_interval)\n",
+    "split_arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "712a0383",
+   "metadata": {},
+   "source": [
+    "getting an array of `silence_mid`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e3b7f3ac",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T18:19:16.601393Z",
+     "start_time": "2022-03-17T18:19:16.587401Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 14.3557565,  14.71412  ,  53.2015355,  68.001009 , 115.093603 ,\n",
+       "       131.2179955, 144.1225625, 168.68283  , 174.648544 , 186.6214605,\n",
+       "       247.038247 , 354.971383 , 381.905991 , 387.800628 , 391.696669 ,\n",
+       "       411.600753 , 413.321812 , 414.8674445, 416.0244875, 417.6543015,\n",
+       "       421.5824465, 424.6579205, 439.5470295])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silence_mid = results_df.silence_mid.to_numpy()\n",
+    "silence_mid "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b64dd287",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T18:37:12.488644Z",
+     "start_time": "2022-03-17T18:37:12.469697Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[53.2015355] 0\n",
+      "[53.2015355, 115.09360299999999] 1\n",
+      "[53.2015355, 115.09360299999999, 174.648544] 2\n",
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247] 3\n",
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247] 4\n",
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383] 5\n",
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383, 421.5824465] 6\n",
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383, 421.5824465, 421.5824465] 6\n",
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383, 421.5824465, 421.5824465, 424.6579205] 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[53.2015355,\n",
+       " 115.09360299999999,\n",
+       " 174.648544,\n",
+       " 247.038247,\n",
+       " 247.038247,\n",
+       " 354.971383,\n",
+       " 421.5824465,\n",
+       " 421.5824465,\n",
+       " 424.6579205]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for i, split_time in enumerate(split_arr):\n",
+    "i=0\n",
+    "success_array =[]\n",
+    "for j, silence_time in enumerate(silence_mid):\n",
+    "    if silence_time < split_arr[i]:\n",
+    "        continue\n",
+    "    else:\n",
+    "        # compare which item is closer to our suggested split time\n",
+    "        prev_silence = silence_mid[j-1]\n",
+    "        if silence_time-split_arr[i] > split_arr[i] - prev_silence:\n",
+    "            success_array.append(prev_silence)\n",
+    "        else:\n",
+    "            success_array.append(silence_time)\n",
+    "        # move to the next time in the split_arr\n",
+    "        print(success_array, i)\n",
+    "        if i< len(split_arr)-1:\n",
+    "            i +=1\n",
+    "success_array"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb6ed06e",
+   "id": "dea2838a",
    "metadata": {},
    "outputs": [],
    "source": []
